...

            <LinearLayout android:id="@+id/controlPanel0"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <com.forrestguice.support.widget.ImageButton android:id="@+id/cancel_button" style="@style/ActionButton"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionBack"
                    android:contentDescription="@string/dialog_cancel" />

            </LinearLayout>

            <TextView android:id="@+id/text_event_label"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="64dp"
                android:textAppearance="?attr/textAppearanceSmallPopupMenu" android:textSize="?attr/text_size_medium"
                android:text="@string/events_editevent_dialog_title"
                android:gravity="center" android:padding="0dp"
                android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
                android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical" />

            <EditText android:id="@+id/edit_event_label"
                android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:minWidth="150dp"
                android:textAppearance="?attr/textAppearanceSmallPopupMenu"
                android:hint="@string/events_editevent_dialog_label_hint" android:inputType="text"
                android:paddingLeft="5dp" android:paddingRight="5dp"
                android:nextFocusDown="@+id/edit_event_angle"
                android:layout_gravity="center_vertical" />

            <LinearLayout android:id="@+id/controlPanel1"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <com.forrestguice.support.widget.ImageButton android:id="@+id/save_button" style="@style/ActionButton"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="?attr/icActionSave"
                    android:contentDescription="@string/events_action_saveEvent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="12dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <FrameLayout android:id="@+id/chip_event_offset" android:contentDescription="@string/alarms_action_setAlarmOffset"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:orientation="horizontal" android:gravity="start|center_vertical"
                android:background="?attr/selectableItemBackground"
                android:focusable="true" android:clickable="true">

                <TextView
                    android:id="@+id/edit_event_offset" style="@style/ChipText" android:gravity="center"
                    android:layout_width="wrap_content" android:layout_height="match_parent" android:minWidth="100dp"
                    tools:text="at" />

            </FrameLayout>

            <LinearLayout android:id="@+id/layout_event_height"
                android:orientation="horizontal"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:labelFor="@+id/edit_event_height" android:textSize="?attr/text_size_small"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
                    android:text="@string/events_editevent_dialog_height" />

                <EditText android:id="@+id/edit_event_height"
                    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
...

            <LinearLayout android:id="@+id/layout_event_length"
                android:orientation="horizontal"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView android:labelFor="@+id/edit_event_length" android:textSize="?attr/text_size_small"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
                    android:text="@string/events_editevent_dialog_length" />

                <EditText android:id="@+id/edit_event_length"
                    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
...
